force-app/main/default/objects/Milestone__c/Milestone__c.object-meta.xml
<CustomObject>
    <description>Use to track Milestones for Shared Solar systems</description>
    <label>Milestone</label>
    <nameField>
        
        <label>Milestone Name</label>
        
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>