force-app/main/default/objects/Milestone__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <inlineHelpText>What percent of customer acquisition corresponds to this Milestone?</inlineHelpText>
    <label>Percentage</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>