force-app/main/default/objects/Milestone__c/fields/Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Type__c</fullName>
    <inlineHelpText>Used in conjunction with the percentage field</inlineHelpText>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>At Least</fullName>
                
                
                    <label>At Least</label>
                
                </value>
            
                <value>
                
                    <fullName>Equal To</fullName>
                
                
                    <label>Equal To</label>
                
                </value>
            
                <value>
                
                    <fullName>No More Than</fullName>
                
                
                    <isActive>false</isActive>
                
                    <label>No More Than</label>
                
                </value>
            
                <value>
                
                    <fullName>Up To</fullName>
                
                
                    <isActive>false</isActive>
                
                    <label>Up To</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>