force-app/main/default/objects/Milestone__c/fields/Shared_Solar_System__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Shared Solar System that this Milestone is tied to.</inlineHelpText>
    <label>Shared Solar System</label>
    <referenceTo>Shared_Solar_System__c</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>